force-app/main/default/objects/ARF_CreditBureau_Config__c/ARF_CreditBureau_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Credit Bureau Config</label>
</CustomObject>