force-app/main/default/objects/ARF_CreditBureau_Config__c/fields/API_Secret__c.field-meta.xml
<CustomField>
    <fullName>API_Secret__c</fullName>
    <label>API Secret</label>
    <type>Text</type>
    <length>255</length>
</CustomField>