force-app/main/default/objects/ARF_CreditBureau_Config__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Text</type>
    <length>50</length>
</CustomField>