force-app/main/default/objects/ARF_CreditBureau_Config__c/fields/Sandbox_Mode__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Mode__c</fullName>
    <label>Sandbox Mode</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>